2007-10-17  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* UI/MailerUI/UIxMailActions.m ([UIxMailActions -copyAction]):
	implemented new web method.

	* SoObjects/Mailer/SOGoMailObject.m ([SOGoMailObject
	-copyToFolderNamed:folderNameinContext:]): new method with the
	code cut/pasted from -moveToFolderNamed:inContext:.
	([SOGoMailObject -moveToFolderNamed:folderNameinContext:]):
	modified to use the code from -copyToFolderNamed:inContext:, which
	is common between the two actions.

	* SoObjects/Mailer/SOGoMailAccount.m ([SOGoMailAccount -draftsFolderNameInContext:_ctx])
	([SOGoMailAccount -sentFolderNameInContext:])
	([SOGoMailAccount -trashFolderNameInContext:]): modified to take
	the user settings into account.

	* UI/MailerUI/UIxMailFolderActions.m ([UIxMailFolderActions -setAsDraftsFolderAction])
	([UIxMailFolderActions -setAsSentFolderAction])
	([UIxMailFolderActions -setAsTrashFolderAction]): new web methods
	that change the purpose of the active folder to "Sent", "Drafts"
	or "Trash".

	* UI/SOGoUI/SOGoACLAdvisory.m ([SOGoACLAdvisory -subject]): 
	returns the subject as quoted-printable.

	* UI/SOGoUI/SOGoACLAdvisory.[hm]: added two intermediary classes:
	SOGoACLAdditionAdvisory and SOGoACLRemovalAdvisory implementing
	the "aclMethod" method for the subsequent language-dependent
	subclasses.

	* UI/SOGoUI/SOGoFolderAdvisory.m ([SOGoFolderAdvisory -subject]):
	returns the subject as quoted-printable.

	* UI/Scheduler/UIxAppointmentEditor.m ([UIxAppointmentEditor
	-dealloc]): release item, aptStartDate and aptEndDate.

2007-10-16  Wolfgang Sourdeau  <wsourdeau@inverse.ca>

	* SoObjects/Mailer/SOGoMailFolder.m ([SOGoMailFolder
	-initWithName:newNameinContainer:newContainer]): the owner of a
	shared folder is set to "nobody" by default.

	* UI/Common/UIxAclEditor.m ([UIxAclEditor -hasOwner]): new method
	that returns whether the object has an owner or not.

2007-10-15  Wolfgang Sourdeau  <wsourdeau@inverse.ca>
