@@ -42,6 +42,8 @@
 	      const:negate="YES"
 	      >var UserFolderURL = '<var:string value="userFolderPath" />';
 	      var UserLogin = '<var:string value="shortUserNameForDisplay" />';</var:if>
+	    <var:string value="commonLocalizableStrings" const:escapeHTML="NO"/>
+	    <var:string value="productLocalizableStrings" const:escapeHTML="NO"/>
 	  </script>
 	  <script type="text/javascript" rsrc:src="events.js"><!-- space required --></script>
 	  <script type="text/javascript" rsrc:src="prototype.js"><!-- space required --></script>
@@ -55,15 +57,11 @@
 	  <script type="text/javascript" rsrc:src="generic.js"><!-- space required --></script>
 	  <script type="text/javascript" rsrc:src="SOGoDragAndDrop.js"><!-- space required --></script>
 	  <script type="text/javascript" rsrc:src="SOGoDragHandles.js"><!-- space required --></script>
+
 	  <var:if condition="hasProductSpecificJavaScript"><script type="text/javascript"
 	      var:src="productJavaScriptURL"><!-- space required --></script></var:if>
 	  <var:if condition="hasPageSpecificJavaScript"><script type="text/javascript"
 	      var:src="pageJavaScriptURL"><!-- space required --></script></var:if>
-	  <var:js-stringtable
-	    var:framework="productFrameworkName"
-	    const:identifier="labels" />
-	  <var:js-stringtable
-	    const:identifier="clabels" />
 	  <var:if condition="shortUserNameForDisplay" const:value="anonymous"
 	    const:negate="YES"
 	    ><var:if condition="shortUserNameForDisplay" const:value="wrongusernamepassword"
